# prospect-analyzer

./: .gitignore  .ocamlformat  L.opam  Makefile  README.md  dune-project  l.ml  l.mli  lexer.mll  ln.tex  main.ml  mux.l  parser.mly  prospect_analyzer.opam  simplebnf.sty  test.l  test2.l
doc/: ln.tex
lib/: colorizer.ml  colorizer.mli  dune  l.ml  l.mli  main.ml  monads.ml  monads.mli  parser.mly  path.ml  path.mli  shape_analyzer.ml  shape_analyzer.mli  util.ml  util.mli  value_analyzer.ml  value_analyzer.mli
tests/: test_2.l  test_3.l  test_4.l  test_5.l  test_6.l  test_7.l  test_8.l
