(lang dune 3.2)

(name L)

(generate_opam_files true)

(source
 (github Zeta611/L))

(authors "Jay Lee")

(maintainers "Jay Lee")

(license MIT)

(package
 (name L)
 (synopsis "L")
 (description "L")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
